# screen

./: ChangeLog  README
drafts/: screen_internal
src/: .gitignore  ChangeLog  INSTALL  Makefile.in  README  acconfig.h  acinclude.m4  acls.c  acls.h  alias.c  alias.h  ansi.c  ansi.h  attacher.c  attacher.h  authentication.c  authentication.h  autogen.sh  backtick.c  backtick.h  braille.c  braille.h  braille_tsi.c  canvas.c  canvas.h  comm.c  comm.sh  command.c  command.h  configure.ac  configure.in  display.c  display.h  encoding.c  encoding.h  extern.h  fileio.c  fileio.h  fwddecl.h  help.c  (+71 more)
src/doc/: screen.1  screen.texinfo
src/drafts/: screen_internal  scripting
src/etc/: completer.zsh  screenrc
src/scripts/: callback.py  cmdcallback.lua  findwindow.lua  input.py  py.py
src/tests/: macros.h  mallocmock.c  test-winmsgbuf.c  test-winmsgcond.c  test-winmsgtok.c
src/testscripts/: README  lib.sh  run.sh
src/testscripts/fonts/: README.txt
src/testscripts/helper-scripts/: 9000-test.pl
src/testscripts/tests/: 0001-basic.sh  0101-unicode-plane-output.sh  9000-bug-50601.sh
